--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,6 +21,14 @@
       <div id="header">
         <nav>
           <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
+         {%- assign default_paths = site.pages | map: "path" -%}
+         {%- assign page_paths = site.header_pages | default: default_paths -%}
+         {%- for path in page_paths -%}
+            {%- assign my_page = site.pages | where: "path", path | first -%}
+            {%- if my_page.title -%}
+			<li class="title"><a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a></li>
+            {%- endif -%}
+        {%- endfor -%}
           {% if site.show_downloads %}
             <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
             <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
